--- a/Content/Topics/Release Notes/Breaking Changes.htm
+++ b/Content/Topics/Release Notes/Breaking Changes.htm
@@ -6,6 +6,6 @@
         <h1>Breaking Changes</h1>
         <h2>Inventory </h2>
         <p>The exceedingly old and replaced pair of tables, <span class="Emphasis">tbl_ArchiveInventory</span> and <span class="Emphasis">tbl_ArchiveInventoryStatus</span>, having been deprecated since JE 3.5.2.2, are explicitly excluded from any Purge activities.  In addition, the database Foreign Key linking the former to the core <span class="Emphasis">tbl_Inventory</span> table has been removed (DROPped) and will not be reinstated.  Any custom code still referencing these tables ought to be eliminated entirely.</p>
-        <p>Any custom or TG JE support developed Inventory Purge procedures must be removed immediately and never reinstated.  The new Inventory Purge supports purge of data from both TG JE core and any custom tables using InventoryID.  Using any other purge mechanism is unsupported and is undertaken at the user’s own risk.</p>
+        <p>Any custom or TG JE support developed Inventory Purge procedures <span class="Emphasis">must be removed immediately and never reinstated</span>.  The new Inventory Purge supports purge of data from both TG JE core and any custom tables using <span class="Emphasis">InventoryID</span>.  Using any other purge mechanism is unsupported and is undertaken at the user’s own risk.</p>
     </body>
 </html>
