MFP existing content reorg

--- a/Content/Topics/Merchandise Financial Planning/Changing Multiple Cells At Once.htm
+++ b/Content/Topics/Merchandise Financial Planning/Changing Multiple Cells At Once.htm
@@ -17,7 +17,7 @@
             <li><span class="Emphasis">Increase/Decrease</span>: Increases or decreases the selected cells by the specified amount or percent.</li>
             <li><span class="Emphasis">Split Value</span>: Splits the entered value across the selected cells either as a weighted split based on the current cell values or evenly.</li>
             <li>
-                <p><span class="Emphasis">Copy From</span>: a number of cells equal to the number currently selected can be chosen to copy values from. </p>
+                <p><span class="Emphasis">Copy From</span>: A number of cells equal to the number currently selected can be chosen to copy values from. </p>
                 <ol>
                     <li>Click the <span class="Emphasis">Select Fields</span> button.</li>
                     <li>Select the desired cells in the view.</li>
