--- a/Content/Topics/Merchandise Financial Planning/Main Planning View.htm
+++ b/Content/Topics/Merchandise Financial Planning/Main Planning View.htm
@@ -125,19 +125,9 @@
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyE-Column1-Body1">
-                        <MadCap:xref href="Restoring  previously saved layouts.htm">Restore Layout</MadCap:xref>
+                        <MadCap:xref href="Working With Layouts.htm">Restore Layout, Restore Data Layout, Save Layout</MadCap:xref>
                     </td>
-                    <td class="TableStyle-standard-BodyD-Column2-Body1">Displays plan data in the selected layout.</td>
-                </tr>
-                <tr class="TableStyle-standard-Body-Body1">
-                    <td class="TableStyle-standard-BodyE-Column1-Body1">&#160;</td>
-                    <td class="TableStyle-standard-BodyD-Column2-Body1">Changes the data fields displayed to those included in the selected data layout.</td>
-                </tr>
-                <tr class="TableStyle-standard-Body-Body1">
-                    <td class="TableStyle-standard-BodyE-Column1-Body1">
-                        <MadCap:xref href="Designing and saving layouts.htm">Save Layout</MadCap:xref>
-                    </td>
-                    <td class="TableStyle-standard-BodyD-Column2-Body1">Saves the current configuration of filters, pivots, and data fields.</td>
+                    <td class="TableStyle-standard-BodyD-Column2-Body1">Displays plan data in the selected layout. <span class="Emphasis">Save Layout</span> saves the current configuration of filters, pivots, and data fields.</td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyB-Column1-Body1">Status Bar</td>
@@ -152,7 +142,7 @@
                 <MadCap:xref href="Parameters.htm">Plan Parameters</MadCap:xref>
             </li>
             <li>
-                <MadCap:xref href="Restoring  previously saved layouts.htm">Changing Data Layouts</MadCap:xref>
+                <MadCap:xref href="Working With Layouts.htm">Working with layouts</MadCap:xref>
             </li>
             <li>
                 <MadCap:xref href="Adding, Removing, and Rearranging Fields.htm">Adding, Removing, and Rearranging Fields</MadCap:xref>
