--- a/Content/Topics/Merchandise Financial Planning/Workspaces, Layouts, and Data Layouts.htm
+++ b/Content/Topics/Merchandise Financial Planning/Workspaces, Layouts, and Data Layouts.htm
@@ -36,12 +36,7 @@
         <ul>
             <li>
                 <p>
-                    <MadCap:xref href="Designing and saving layouts.htm">Designing and saving layouts</MadCap:xref>
-                </p>
-            </li>
-            <li>
-                <p>
-                    <MadCap:xref href="Restoring  previously saved layouts.htm">Restoring  previously saved layouts</MadCap:xref>
+                    <MadCap:xref href="Working With Layouts.htm">Restoring  previously saved layouts</MadCap:xref>
                 </p>
             </li>
         </ul>
