--- a/Content/Topics/Price Planning/Price Planning tab.htm
+++ b/Content/Topics/Price Planning/Price Planning tab.htm
@@ -68,19 +68,16 @@
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyE-Column1-Body1">Refresh Pricing</td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">
-                        <p>Recalculate new prices based on the keyed in value. Refreshing the pricing does not overwrite any user keyed values.</p>
-                        <p>This is a quick and convenient way to check for and refresh price and cost data based on the date and recalculate all items for a price action or price action cluster regardless of the calculation status.</p>
-                        <p>Users can display a particular price action and refresh the whole price action or select and refresh a specific cluster. The entire price action is recalculated whether or not it's been modified.</p>
-                        <p>Refreshing can be repeated as necessary. For example, should all the prices or costs change later on, the <span class="Emphasis">Refresh Pricing</span> functionality can be rerun. All the prices or costs for all of the items and all the clusters update and the calculations redone.</p>
-                    </td>
+                        Recalculate new prices based on the keyed in value. Refreshing the pricing does not overwrite any user keyed values. 
+                        <p>This is a quick and convenient way to check for and refresh price and cost data based on the date and recalculate all items for a price action or price action cluster regardless of the calculation status.</p><p>Users can display a particular price action and refresh the whole price action or select and refresh a specific cluster. The entire price action is recalculated whether or not it's been modified.</p><p>Refreshing can be repeated as necessary. For example, should all the prices or costs change later on, the <span class="Emphasis">Refresh Pricing</span> functionality can be rerun. All the prices or costs for all of the items and all the clusters update and the calculations redone.</p></td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyE-Column1-Body1">Clear</td>
-                    <td class="TableStyle-standard-BodyD-Column2-Body1">Deletes any previously saved data in progress (data that has not been used to create a Price Action) and clears the UI of all input values.</td>
+                    <td class="TableStyle-standard-BodyD-Column2-Body1">Deletes any previously saved data in progress (data that has not been used to create a price action) and clears the UI of all input values.</td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyB-Column1-Body1">Select Configuration</td>
-                    <td class="TableStyle-standard-BodyA-Column2-Body1"> Once the parameters are selected and at least one change made, the set is saved (except for the Variant Site Filter selection) and can be selected at a later date to further modify the Plan prior to the Plan being submitted.</td>
+                    <td class="TableStyle-standard-BodyA-Column2-Body1"> Once parameters are selected and at least one change made, the set is saved (except for the Variant Site Filter selection) and can be selected at a later date to further modify plans prior to submission.</td>
                 </tr>
             </tbody>
         </table>
