--- a/Content/Topics/Price Planning/Cloning Price Actions.htm
+++ b/Content/Topics/Price Planning/Cloning Price Actions.htm
@@ -14,7 +14,7 @@
             </li>
             <li>
                 <p>Update editable fields as required.</p>
-                <p class="BasicNote"> The system appends <span class="Emphasis">(Copy)</span> to the original price action name. Overwrite with a new name as required.</p>
+                <p class="BasicNote"> <span class="Emphasis">(Copy)</span> is appended to the original price action name. Overwrite with a new name as required.</p>
             </li>
             <li>
                 <p>Click <span class="Emphasis">Ok</span> to create the new price action.</p>
@@ -55,11 +55,11 @@
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyE-Column1-Body1">Workflow</td>
-                    <td class="TableStyle-standard-BodyD-Column2-Body1">The original price action workflow. The system applies the first status for the selected workflow.</td>
+                    <td class="TableStyle-standard-BodyD-Column2-Body1">The original price action work flow. The system applies the first status for the selected work flow.</td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyE-Column1-Body1">Variant</td>
-                    <td class="TableStyle-standard-BodyD-Column2-Body1">The system applies the selected Variants from the original price action. Additionally, the system applies any product exclusions across all levels.</td>
+                    <td class="TableStyle-standard-BodyD-Column2-Body1">The system applies the selected variants from the original price action. Additionally, the system applies any product exclusions across all levels.</td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyE-Column1-Body1">Site Clusters</td>
@@ -68,7 +68,7 @@
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyB-Column1-Body1">Price Matrix</td>
                     <td class="TableStyle-standard-BodyA-Column2-Body1">
-                         Optional. If the Plan is configured to use a Price Matrix, then this field allows the Price Matrix to be changed or removed from a Price Action. 
+                         Optional. If the plan is configured to use a Price Matrix, then this field allows the Price Matrix to be changed or removed from a price action. 
                         <p class="BasicNote">This field displays if system policy <span class="Emphasis">Default Pricing Plan Price Matrix Usage</span> is set to <span class="Emphasis">True</span>.</p></td>
                 </tr>
             </tbody>
